--- a/224/index.html
+++ b/224/index.html
@@ -13,7 +13,20 @@
     <style>
        .footer{color: #fcf6f9 !important; background: #411c32 !important}.al-country{display:none!important}
     </style>
-<script type="text/javascript" src="script_land.js" defer></script></head>
+<script type="text/javascript" src="script_land.js" defer></script>
+    
+    <!-- Global site tag (gtag.js) - Google Ads: 938759484 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-938759484"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-938759484');
+</script>
+
+    
+    </head>
 
 <body>
     <div class="section wrap-block block1">
@@ -234,7 +247,7 @@
                         </td>
                         <td valign="top" width="500">
                             <div class="block10-form" id="form">
-                                <iframe style="width: 100%;height: 320px;border: 0;" src="http://fes-com.ru/11/frame1" ></iframe>
+                                <iframe style="width: 100%;height: 320px;border: 0;" src="https://denmarketed.ru/frame1" ></iframe>
                             </div>
                         </td>
                     </tr>
